# web3-cli

./: .gitignore  Cargo.toml  README.md
docs/: skills.md
skills/recipe-first-transaction/: SKILL.md
skills/web3-balance/: SKILL.md
skills/web3-send/: SKILL.md
skills/web3-shared/: SKILL.md
skills/web3-wallet/: SKILL.md
src/: config.rs  credential_store.rs  error.rs  lib.rs  main.rs  output.rs
src/chains/: mod.rs
src/chains/evm/: contract.rs  mod.rs  provider.rs  tokens.rs  tx.rs
src/chains/solana/: mod.rs
src/chains/sui/: mod.rs
src/commands/: balance.rs  chain.rs  config_cmd.rs  evm.rs  mod.rs  send.rs  sign.rs  solana.rs  sui.rs  tx.rs  wallet.rs
src/keys/: evm_signer.rs  mnemonic.rs  mod.rs  solana_signer.rs  sui_signer.rs
tests/: cli_integration.rs  key_derivation.rs
