[package]
name = "web3-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
description = "Multi-chain Web3 wallet CLI for AI agents"
license = "MIT"
keywords = ["web3", "wallet", "ethereum", "solana", "sui"]
categories = ["command-line-utilities"]

[lib]
name = "web3_cli"
path = "src/lib.rs"

[[bin]]
name = "web3"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# EVM
alloy = { version = "1.6", default-features = false, features = [
    "providers",
    "sol-types",
    "contract",
    "reqwest",
    "reqwest-rustls-tls",
    "signer-local",
    "signers",
    "network",
    "consensus",
    "rpc-types",
] }

# Crypto & keys
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"

# Keyring (platform-specific)
keyring = "3.6"

# Serialization & output
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"

# Errors
thiserror = "2"
anyhow = "1"

# Misc
async-trait = "0.1"
dirs = "6"
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
